--- a/package.json
+++ b/package.json
@@ -26,6 +26,17 @@
     "grunt-open": "^0.2.3",
     "grunt-premailer": "^0.2.13",
     "grunt-replace": "^0.9.2",
+    "gulp": "^3.9.0",
+    "gulp-assemble": "^0.3.2",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-litmus": "0.0.7",
+    "gulp-mailgun": "0.0.4",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
     "imagemin-mozjpeg": "^5.1.0",
     "load-grunt-tasks": "^3.2.0"
   }
